--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
-    <link rel="stylesheet" href="/static/css/index.css"> <!-- Link para o arquivo CSS -->
+    <link rel="stylesheet" href="/assets/css/index.css"> <!-- Link para o arquivo CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <a href="/contact/">Contato</a>
         </div>
         <div class="profile-dropdown">
-            <img id="profile-icon" src="/static/imgs/icons/profile_picture.jpg" alt="Perfil" style="width: 40px; border-radius: 50%;">
+            <img id="profile-icon" src="/assets/imgs/icons/profile_picture.jpg" alt="Perfil" style="width: 40px; border-radius: 50%;">
             <div class="profile-dropdown-content" id="profile-menu">
                 <!-- O conteúdo do menu será gerado pelo JavaScript -->
             </div>
@@ -65,6 +65,6 @@
         </div>
     </div>
 
-    <script src="/static/js/index.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 </html>
