--- a/login/index.html
+++ b/login/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/registration/login.css' %}">
+    <link rel="stylesheet" href="/assets/css/registration/login.css">
     <title>Página de Login</title>
 </head>
 <body>
@@ -25,6 +24,6 @@
         </form>
     </div>
     
-    <script src="{% static 'js/registration/login.js' %}"></script>
+    <script src="/assets/js/registration/login.js"></script>
 </body>
 </html>
