--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="/contact/">Contato</a>
         </div>
         <div class="profile-dropdown">
-            <img id="profile-icon" src="/assets/imgs/icons/profile_picture.jpg" alt="Perfil" style="width: 40px; border-radius: 50%;">
+            <img id="profile-icon" src="/assets/imgs/icons/profile.png" alt="Perfil" style="width: 40px; border-radius: 50%;">
             <div class="profile-dropdown-content" id="profile-menu">
                 <!-- O conteúdo do menu será gerado pelo JavaScript -->
             </div>
@@ -31,11 +31,11 @@
             <p class="sidebar_text"><i class="fa-sharp-duotone fa-solid fa-database"></i>SQL</p>
             <p class="sidebar_text">FazoL</p>
             <h2 class="sidebar_titles"><i class="fa-duotone fa-solid fa-folder-open"></i>Competências</h2>
-            <p class="sidebar_text">mozovo</p>
-            <p class="sidebar_text">preda</p>
-            <p class="sidebar_text">tauba</p>
-            <p class="sidebar_text">batuatua</p>
-            <p class="sidebar_text">ta com a mão limpa?</p>
+            <p class="sidebar_text">Descrição 1</p>
+            <p class="sidebar_text">Descrição 2</p>
+            <p class="sidebar_text">Descrição 3</p>
+            <p class="sidebar_text">Descrição 4</p>
+            <p class="sidebar_text">Descrição 5</p>
             <!-- <li class="li_sidebar_item">mozovo</li>
             <li class="li_sidebar_item">preda</li>
             <li class="li_sidebar_item">tauba</li>
